--- a/src/displayList.css
+++ b/src/displayList.css
@@ -29,7 +29,7 @@
 }
 #listContainer small{
     display: block;
-    color: #36454F;
-    font-size: 0.5rem;
+    color: #6f7980;
+    font-size: 0.7rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
